fixed menu trigger collapsable and getting drag&drop almost working

--- a/cms/static/cms/sass/plugins/cms.placeholders.scss
+++ b/cms/static/cms/sass/plugins/cms.placeholders.scss
@@ -61,12 +61,12 @@
 }
 .cms_dragholder-draggable { cursor:move; z-index:100; }
 
-
-
-
 .cms_dragitem-collapsable { cursor:pointer; padding-left:15px !important;
 	background:url('/static/cms/img/toolbar/arrow-down-active.png') no-repeat 3px 7px !important; }
 .cms_dragitem-collapsed { background:url('/static/cms/img/toolbar/arrow-down-collapsed.png') no-repeat 3px 6px !important; }
+
+.cms_dragitem-success { position:absolute; left:-1px; top:-1px; @include border-radius(3px); width:100%; height:100% !important;
+	border:1px solid #59e140 !important; background:#acf09f !important; @include opacity(0.6); }
 
 //##################################################
 // #PLACEHOLDER-SORTABLES#
